[gd_scene load_steps=22 format=2]

[ext_resource path="res://Minigames/Yeti/BreakablePlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Art/Yeti/SnowPileDropped.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Interactables/BreakablePlatform.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Yeti/SnowPileReady.png" type="Texture" id=4]
[ext_resource path="res://Minigames/Yeti/YetiDeath.gd" type="Script" id=5]
[ext_resource path="res://Minigames/Yeti/SnowParticles.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Animation" id=177]
resource_name = "Drop Snow and Flash"
tracks/0/type = "value"
tracks/0/path = NodePath("Flash/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SnowPileReady:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SnowPileDropped:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BreakablePlatform:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_snow_particles"
} ]
}

[sub_resource type="Animation" id=178]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Flash/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SnowPileDropped:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SnowPileReady:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BreakablePlatform:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BreakablePlatform:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=179]
extents = Vector2( 8, 72 )

[sub_resource type="RectangleShape2D" id=180]
extents = Vector2( 8, 4 )

[sub_resource type="Curve" id=181]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0318182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=182]
offsets = PoolRealArray( 0.3125, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=183]
colors = PoolColorArray( 0.643137, 0.866667, 0.858824, 1, 0.45098, 0.745098, 0.827451, 1 )

[node name="YetiDeath" type="Node2D"]
script = ExtResource( 5 )

[node name="SnowPileReady" type="Sprite" parent="."]
position = Vector2( -8, -64 )
z_index = -1
texture = ExtResource( 4 )
offset = Vector2( 0, 1 )

[node name="BreakablePlatform" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 16 )
frames = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Drop Snow and Flash" = SubResource( 177 )
anims/RESET = SubResource( 178 )

[node name="SnowPileDropped" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 40, 88 )
z_index = -1
texture = ExtResource( 2 )
offset = Vector2( 3, 0 )

[node name="Flash" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="Flash"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="YetiActivation" type="Area2D" parent="."]
position = Vector2( 0, 72 )
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="YetiActivation"]
shape = SubResource( 179 )

[node name="ScreenShakeZone" type="Area2D" parent="."]
position = Vector2( -48, 40 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenShakeZone"]
shape = SubResource( 180 )

[node name="SnowParticles" type="CPUParticles2D" parent="."]
position = Vector2( -24, 64 )
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
explosiveness = 0.81
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, 10, -10, -10, 10 )
emission_colors = PoolColorArray(  )
direction = Vector2( -1, -1.5 )
spread = 70.0
gravity = Vector2( 0, 20 )
initial_velocity = 50.0
initial_velocity_random = 0.33
scale_amount = 1.5
scale_amount_random = 0.4
scale_amount_curve = SubResource( 181 )
color_ramp = SubResource( 182 )
color_initial_ramp = SubResource( 183 )
script = ExtResource( 6 )

[node name="SnowParticles2" type="CPUParticles2D" parent="SnowParticles"]
position = Vector2( 40, 0 )
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
explosiveness = 0.81
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, -10, -10, 10, 10 )
emission_colors = PoolColorArray(  )
direction = Vector2( 1, -1.5 )
spread = 70.0
gravity = Vector2( 0, 20 )
initial_velocity = 50.0
initial_velocity_random = 0.33
scale_amount = 1.5
scale_amount_random = 0.4
scale_amount_curve = SubResource( 181 )
color_ramp = SubResource( 182 )
color_initial_ramp = SubResource( 183 )

[node name="SnowParticles3" type="CPUParticles2D" parent="SnowParticles"]
position = Vector2( 80, 32 )
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
explosiveness = 0.81
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, -10, -10, 10, 10 )
emission_colors = PoolColorArray(  )
direction = Vector2( 1, -1.5 )
spread = 70.0
gravity = Vector2( 0, 20 )
initial_velocity = 50.0
initial_velocity_random = 0.33
scale_amount = 1.5
scale_amount_random = 0.4
scale_amount_curve = SubResource( 181 )
color_ramp = SubResource( 182 )
color_initial_ramp = SubResource( 183 )

[node name="SnowParticles4" type="CPUParticles2D" parent="SnowParticles"]
position = Vector2( 113, 52 )
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
explosiveness = 0.81
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, -10, -10, 10, 10 )
emission_colors = PoolColorArray(  )
direction = Vector2( 1, -1.5 )
spread = 70.0
gravity = Vector2( 0, 20 )
initial_velocity = 50.0
initial_velocity_random = 0.33
scale_amount = 1.5
scale_amount_random = 0.4
scale_amount_curve = SubResource( 181 )
color_ramp = SubResource( 182 )
color_initial_ramp = SubResource( 183 )

[node name="SnowParticles5" type="CPUParticles2D" parent="SnowParticles"]
position = Vector2( 29, 25 )
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
explosiveness = 0.81
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, -10, -10, 10, 10 )
emission_colors = PoolColorArray(  )
direction = Vector2( 1, -1.5 )
spread = 120.0
gravity = Vector2( 0, 20 )
initial_velocity = 50.0
initial_velocity_random = 0.33
scale_amount = 1.5
scale_amount_random = 0.4
scale_amount_curve = SubResource( 181 )
color_ramp = SubResource( 182 )
color_initial_ramp = SubResource( 183 )

[node name="SnowParticles6" type="CPUParticles2D" parent="SnowParticles"]
position = Vector2( 51, 39 )
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
explosiveness = 0.81
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, -10, -10, 10, 10 )
emission_colors = PoolColorArray(  )
direction = Vector2( 1, -1.5 )
spread = 120.0
gravity = Vector2( 0, 20 )
initial_velocity = 50.0
initial_velocity_random = 0.33
scale_amount = 1.5
scale_amount_random = 0.4
scale_amount_curve = SubResource( 181 )
color_ramp = SubResource( 182 )
color_initial_ramp = SubResource( 183 )

[node name="SnowParticles7" type="CPUParticles2D" parent="SnowParticles"]
position = Vector2( 88, 59 )
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
explosiveness = 0.81
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, -10, -10, 10, 10 )
emission_colors = PoolColorArray(  )
direction = Vector2( 1, -1.5 )
spread = 120.0
gravity = Vector2( 0, 20 )
initial_velocity = 50.0
initial_velocity_random = 0.33
scale_amount = 1.5
scale_amount_random = 0.4
scale_amount_curve = SubResource( 181 )
color_ramp = SubResource( 182 )
color_initial_ramp = SubResource( 183 )

[node name="SnowParticles" type="CPUParticles2D" parent="SnowParticles"]
position = Vector2( 16, 36 )
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
explosiveness = 0.81
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, 10, -10, -10, 10 )
emission_colors = PoolColorArray(  )
direction = Vector2( -1, -1.5 )
spread = 120.0
gravity = Vector2( 0, 20 )
initial_velocity = 50.0
initial_velocity_random = 0.33
scale_amount = 1.5
scale_amount_random = 0.4
scale_amount_curve = SubResource( 181 )
color_ramp = SubResource( 182 )
color_initial_ramp = SubResource( 183 )

[connection signal="area_entered" from="YetiActivation" to="." method="_on_YetiActivation_area_entered"]
[connection signal="body_entered" from="ScreenShakeZone" to="." method="_on_ScreenShakeZone_body_entered"]
